# cmake_project

trunk/: CMakeLists.txt
trunk/so/: CMakeLists.txt  so.c
trunk/so/inc/: so.h
trunk/so2/: CMakeLists.txt  so2.c
trunk/so2/inc/: so1.h  so2.h
trunk/test/: CMakeLists.txt  test.c
